--- a/app/views/checkouts/cancel.html.erb
+++ b/app/views/checkouts/cancel.html.erb
@@ -1,5 +1,6 @@
-<h1>Checkouts#cancel</h1>
-<p>Find me in app/views/checkouts/cancel.html.erb</p>
-
-
-<h1>cancel page</h1>
+<div class="homepage_container">
+  <div class="homepage_inner_section">
+    <div class="home_header">We could not process your purchase</div>
+    <div><%= link_to "try again", cart_path, class: "home_link" %></div>
+  </div>
+</div>
