--- a/app/views/checkouts/success.html.erb
+++ b/app/views/checkouts/success.html.erb
@@ -1,5 +1,6 @@
-<h1>Checkouts#success</h1>
-<p>Find me in app/views/checkouts/success.html.erb</p>
-
-
-<h1>success page</h1>
+<div class="homepage_container">
+  <div class="homepage_inner_section">
+    <div class="home_header">Thank you for your purchase</div>
+    <div><%= link_to "continue shopping", products_path, class: "home_link" %></div>
+  </div>
+</div>
