--- a/app/views/orders/_order.html.erb
+++ b/app/views/orders/_order.html.erb
@@ -3,7 +3,7 @@
     <table class="table_content">
       <tr>
         <th>customer</th>
-        <th>total</th>
+        <th>total orders (£)</th>
         <th>address</th>
         <th>fulfilled</th>
         <th>created</th>
@@ -38,7 +38,7 @@
         <tr>
           <th>product</th>
           <th>image</th>
-          <th>price</th>
+          <th>price (£)</th>
           <th>colour</th>
           <th>quantity</th>
           <th>ordered date</th>
