--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -8,6 +8,7 @@
     <%= f.input :customer_email %>
     <%= f.input :fulfilled %>
     <%= f.input :total %>
+    <%= @order.total_order %>
     <%= f.input :address %>
   </div>
 
