--- a/app/views/orders/_index.html.erb
+++ b/app/views/orders/_index.html.erb
@@ -11,7 +11,7 @@
     <tr>
       <th>order ID</th>
       <th>customer</th>
-      <th>total</th>
+      <th>total (p)</th>
       <th>address</th>
       <th># orders</th>
       <th>fulfilled</th>
@@ -50,7 +50,7 @@
     <tr>
       <th>order ID</th>
       <th>customer</th>
-      <th>total</th>
+      <th>total (p)</th>
       <th>address</th>
       <th># orders</th>
       <th>fulfilled</th>
