--- a/app/views/orders/_index.html.erb
+++ b/app/views/orders/_index.html.erb
@@ -11,7 +11,7 @@
     <tr>
       <th>order ID</th>
       <th>customer</th>
-      <th>total (p)</th>
+      <th>total (£)</th>
       <th>address</th>
       <th># orders</th>
       <th>fulfilled</th>
@@ -23,7 +23,7 @@
       <tr>
         <td><%= link_to "#{order.id}", admin_order_path(order.admin, order) %></td>
         <td><%= link_to "#{order.customer_email}", admin_order_path(order.admin, order) %></td>
-        <td><%= order.total %></td>
+        <td><%= (order.total/100) %></td>
         <td><%= order.address %></td>
         <td><%= order.order_products.all.count %></td>
         <td>
@@ -50,7 +50,7 @@
     <tr>
       <th>order ID</th>
       <th>customer</th>
-      <th>total (p)</th>
+      <th>total (£)</th>
       <th>address</th>
       <th># orders</th>
       <th>fulfilled</th>
@@ -62,7 +62,7 @@
       <tr>
         <td><%= link_to "#{order.id}", admin_order_path(order.admin, order) %></td>
         <td><%= link_to "#{order.customer_email}", admin_order_path(order.admin, order) %></td>
-        <td><%= order.total %></td>
+        <td><%= (order.total/100) %></td>
         <td><%= order.address %></td>
         <td><%= order.order_products.all.count %></td>
         <td>
