--- a/app/views/shared/_header_user.html.erb
+++ b/app/views/shared/_header_user.html.erb
@@ -6,7 +6,7 @@
     <ul class="header_icon_ul">
       <% if user_signed_in? %>
         <div><%= link_to "sign out", destroy_user_session_path, data: { turbo_method: :delete }, class: "icon_box_link sign_out_btn header_text" %></div>
-        <li>
+        <li class="hide">
           <%= link_to root_path, class: "icon_box_link" do %>
             <div><span class="material-icons">smart_toy</span></div>
             <div class="header_text">AI GPTChat</div>
