--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
   <div class="header_container"><%= render 'shared/header' %></div>
  <div class="main_container"><%= yield %></div>
   <div class="footer_container"><%= render 'shared/footer' %></div>
+  <div><%= link_to "github", "https://stackoverflow.com/questions/68775869/message-support-for-password-authentication-was-removed" %></div>
 </div>
 
 
