--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -86,4 +86,10 @@
     </div>
   <% end %>
   <!--add_cart-->
+
+
+  <!--add_cart-->
+  <div class="new_add_to_cart_section">new add to cart button</div>
+  <!--add_cart-->
 </div>
+<div class="border_content"></div>
