--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -24,6 +24,7 @@
 
   <!--right_content_products-->
   <div class="right_content_products">
+    <div>i am here <%= render "carts/checkout_button" %></div>
     <ul class="listed_products">
       <% @products.each do |product| %>
         <li class="product_item">
