--- a/app/views/carts/_checkout_button.html.erb
+++ b/app/views/carts/_checkout_button.html.erb
@@ -1,4 +1,4 @@
-<div>
-  <%= link_to "", class: "checkout_btn" do %>
-  <% end %>
-</div>
+<%= link_to "#", class: "icon_box_link" do %>
+  <div><span class="material-icons">shopping_cart</span></div>
+  <div class="header_text">new cart <span><%= current_cart.quantity %></span></div>
+<% end %>
