--- a/app/views/shared/_header_user.html.erb
+++ b/app/views/shared/_header_user.html.erb
@@ -25,13 +25,7 @@
           <% end %>
         </li>
 
-        <li>
-          <%= link_to "#", class: "icon_box_link" do %>
-            <div><span class="material-icons">shopping_cart</span></div>
-            <div class="header_text">new cart <span><%= current_cart.quantity %></span></div>
-          <% end %>
-        </li>
-
+        <li><%= render "carts/checkout_button" %></li>
 
         <li>
           <%= link_to cart_path, class: "icon_box_link" do %>
