--- a/app/views/carts/_checkout_button.html.erb
+++ b/app/views/carts/_checkout_button.html.erb
@@ -1,4 +1,8 @@
 <%= link_to "#", class: "icon_box_link" do %>
   <div><span class="material-icons">shopping_cart</span></div>
-  <div class="header_text">new cart <span><%= current_cart.quantity %></span></div>
+  <div class="header_text">
+    <span>new cart</span>
+    <span><%# render"carts/item_count", count: current_cart.quantity %></span>
+    <span><%= current_cart.quantity %></span>
+  </div>
 <% end %>
