--- a/app/views/shared/_header_user.html.erb
+++ b/app/views/shared/_header_user.html.erb
@@ -25,6 +25,7 @@
           <% end %>
         </li>
 
+        <%= turbo_stream_from current_cart %>
         <li><%= render "carts/checkout_button" %></li>
 
         <li>
