--- a/app/views/carts/_checkout_button.html.erb
+++ b/app/views/carts/_checkout_button.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "#", class: "icon_box_link" do %>
+<%= link_to checkout_path, class: "icon_box_link" do %>
   <div><span class="material-icons">shopping_cart</span></div>
   <div class="header_text cart_content">
     <div class="cart_text">new cart</div>
