--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -19,6 +19,26 @@
         <% end %>
       </div>
     </div>
+
+    <div class="filter_search_section">
+      <div class="search_title">text search</div>
+      <div>text search</div>
+    </div>
+
+    <div class="filter_search_section">
+      <div class="search_title">sorting</div>
+      <div>sorting</div>
+    </div>
+
+    <div class="filter_search_section">
+      <div class="search_title">price</div>
+      <div>price</div>
+    </div>
+
+    <div class="filter_search_section">
+      <div class="search_title">category</div>
+      <div>category</div>
+    </div>
     <!--form-->
   </div>
 
