--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -20,25 +20,38 @@
       </div>
     </div>
 
-    <div class="filter_search_section">
-      <div class="search_title">text search</div>
-      <div>text search</div>
-    </div>
 
-    <div class="filter_search_section">
-      <div class="search_title">sorting</div>
-      <div>sorting</div>
-    </div>
+    <%= turbo_frame_tag "filtering" do %>
+      <%= form_for :search, url: search_path, class: "search_section" do |f| %>
+      <div class="filter_search_section">
+        <div class="search_title">text search</div>
+        <%= f.text_field :query, placeholder: "loreum", class: "#" %>
 
-    <div class="filter_search_section">
-      <div class="search_title">price</div>
-      <div>price</div>
-    </div>
+        <div class="filter_buttons_cover">
+          <div><%= f.submit "Filter", class: "" %></div>
+          <div class="clear_btn_cover"><%= link_to "clear", products_path, class: "clear_btn" %></div>
+        </div>
+      </div>
 
-    <div class="filter_search_section">
-      <div class="search_title">category</div>
-      <div>category</div>
-    </div>
+      <div class="filter_search_section">
+        <div class="search_title">sorting</div>
+        <%= f.select :sort, [
+          ["Price Low to High", :price_lth],
+          ["Price High to Low", :price_htl], {include_blank: true}, class: "#"], placeholder: "loreum", class: "#" %>
+      </div>
+
+      <div class="filter_search_section">
+        <div class="search_title">price</div>
+        <div>price</div>
+      </div>
+
+      <div class="filter_search_section">
+        <div class="search_title">category</div>
+        <div>category</div>
+      </div>
+      <% end %>
+    <% end %>
+
     <!--form-->
   </div>
 
