--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -15,7 +15,6 @@
             <div><%= f.submit "Filter", class: "" %></div>
             <div class="clear_btn_cover"><%= link_to "clear", products_path, class: "clear_btn" %></div>
           </div>
-
         <% end %>
       </div>
     </div>
@@ -26,18 +25,13 @@
       <div class="filter_search_section">
         <div class="search_title">text search</div>
         <%= f.text_field :query, placeholder: "loreum", class: "#" %>
-
-        <div class="filter_buttons_cover">
-          <div><%= f.submit "Filter", class: "" %></div>
-          <div class="clear_btn_cover"><%= link_to "clear", products_path, class: "clear_btn" %></div>
-        </div>
       </div>
 
       <div class="filter_search_section">
         <div class="search_title">sorting</div>
         <%= f.select :sort, [
           ["Price Low to High", :price_lth],
-          ["Price High to Low", :price_htl], {include_blank: true}, class: "#"], placeholder: "loreum", class: "#" %>
+          ["Price High to Low", :price_htl]], {include_blank: true}, placeholder: "loreum", class: "#" %>
       </div>
 
       <div class="filter_search_section">
@@ -49,6 +43,11 @@
         <div class="search_title">category</div>
         <div>category</div>
       </div>
+
+        <div class="filter_buttons_cover">
+          <div><%= f.submit "Filter", class: "" %></div>
+          <div class="clear_btn_cover"><%= link_to "clear", products_path, class: "clear_btn" %></div>
+        </div>
       <% end %>
     <% end %>
 
