--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,9 +1,9 @@
 <div id="products" class="left_right_content_products">
   <!--left_content_products-->
   <div class="left_content_products">
-    <!--form-->
     <div class="shop_title">ecom shop</div>
 
+    <!--form-->
     <div class="filter_search_section">
       <div class="search_title">price filter</div>
       <div>
@@ -18,8 +18,9 @@
         <% end %>
       </div>
     </div>
+    <!--form-->
 
-
+    <!--form-->
     <%= turbo_frame_tag "filtering" do %>
       <%= form_for :search, url: search_path, class: "search_section" do |f| %>
         <!--search-->
@@ -78,79 +79,12 @@
         </div>
       <% end %>
     <% end %>
-
     <!--form-->
   </div>
 
   <!--right_content_products-->
   <%= turbo_frame_tag "products_display" do %>
-    <%# render "products/display", products: @products %>
-    <div class="right_content_products">
-      <ul class="listed_products">
-        <% @products.each do |product| %>
-          <li class="product_item">
-            <!--section-->
-            <div class="product_name_cover">
-              <%= link_to product, class: "display_flex_style height_50px" do %>
-                <div class="product_title">product name:</div>
-                <div><%= product.name %></div>
-              <% end %>
-            </div>
-            <!--section-->
-
-            <!--section-->
-            <div class="margin_bottom_15px">
-              <div class="product_image"><%= link_to((image_tag "#{product.image_url}"), product) %></div>
-            </div>
-            <!--section-->
-
-            <!--section-->
-            <% if product.description.present? %>
-              <div class="margin_bottom_15px price_cover">
-                <div class="product_title">description</div>
-                <div><%= product.description %></div>
-              </div>
-            <% end %>
-            <!--section-->
-
-            <!--section-->
-            <div class="margin_bottom_15px price_cover">
-              <div class="product_title">price</div>
-              <div><%= "£#{product.price}" %></div>
-            </div>
-            <!--section-->
-
-            <!--action_buttons-->
-            <div class="products_user_actions_section">
-              <% if user_signed_in? && current_user %>
-                <ul>
-                  <!--impression code-->
-                  <li class="product_user_li">
-                    <div><div><%= "#{product.impressions_count} views" %></div></div>
-                  </li>
-
-                  <!--views-->
-                  <li class="product_user_li">
-                    <% if product.reviews.present? %>
-                      <div><%= "#{product.average_rating}star (#{product.reviews.count}) reviews" %></div>
-                    <% else %>
-                      <div>no reviews</div>
-                    <% end %>
-                  </li>
-
-                  <!--favourite-->
-                  <li class="product_user_li">
-                    <div id="product-<%= product.id %>">
-                      <%= render partial: 'shared/favourites', locals: { product: product} %>
-                    </div>
-                  </li>
-                </ul>
-              <% end %>
-            </div>
-            <!--action_buttons-->
-          </li>
-        <% end %>
-      </ul>
-    </div>
+    <%= render "products/display", products: @products %>
   <% end %>
 </div>
+
